--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Todo list on Vue.js</title>
+    <title>Todo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div id="app">
+        <h1 class="title">Todo list on Vue.js</h1>
+        <input class="input" type="text">
+        <button class="btn">Добавить</button>
+    </div>
 </body>
 </html>
