--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <button @click="addItem" class="btn">Добавить запись</button>
         <hr/>
         <ul v-if="itemList.length > 0" class="list">
-            <li class="list-item" v-for="(item, index) in itemList"> {{ index + 1 }}: {{ item }} </li>
+            <li class="list-item" v-for="(item, index) in itemList">
+                {{ index + 1 }}: {{ item }}
+                <button class="btn btn_del">Удалить</button>
+            </li>
         </ul>
         <p v-else>Добавьте первую заметку</p>
     </div>
